--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p>Space Evangers is a Christian comic book series for children and young adults. It follows the fictional adventures of an intergalactic missionary society whose purpose is to bring the gospel to different alien dominions across the multiverse. The stories explore key biblical themes, such as faith, courage, truth, and discipleship. The purpose is to educate, to entertain, and to inspire the next generation of harvesters who will go out into the fields.</p>
 <hr>
 <a href="./Main Characters/list of main characters.html"><h3>Main Characters</h3></a>
-<h3>Artists and Writers</h3>
+<a href="./Creators/creators.html"><h3>Creators</h3></a>
 <h3>Issue #0</h3>
 <h3>Issue #1</h3>
 <h3>More About Space Evangers</h3>
